# SDL2_learning_projects

./: README.md
00_init_sdl_project/: main.cpp
01_show_image_project/: .gitignore  CMakeLists.txt  main.cpp
03_texture_loading_rendering_project/: main.cpp
04_draw_geometry_project/: main.cpp
05_color_keying/: CMakeLists.txt  main.cpp
05_color_keying/classes/sources/: Texture.h
05_color_keying/headers/: Texture.h
05_color_keying/libs/Texture/: Texture.cpp
06_sprite_sheets/: main.cpp
06_sprite_sheets/libs/Texture/: Texture.cpp  Texture.h
07_animated_sprite/: main.cpp
07_animated_sprite/libs/Texture/: CMakeLists.txt  Texture.cpp  Texture.hpp
08_font_rendering/: CMakeLists.txt  compile_flags.txt  main.cpp
08_font_rendering/libs/Texture/: Texture.cpp  Texture.hpp
09_mouse_events/: CMakeLists.txt  compile_flags.txt  main.cpp
09_mouse_events/libs/Button/: Button.cpp
10_audio_handler/: CMakeLists.txt  main.cpp
10_audio_handler/libs/Button/: Button.cpp
11_timing/: main.cpp
11_timing/libs/Button/: Button.hpp
12_advanced_timing/: CMakeLists.txt  compile_flags.txt  main.cpp
12_advanced_timing/libs/Texture/: Texture.cpp
13_framerate/libs/Timer/: Timer.cpp
14_movement_and_collisions/: CMakeLists.txt  compile_flags.txt  main.cpp
14_movement_and_collisions/libs/Dot/: CMakeLists.txt  Dot.cpp  Dot.hpp
14_movement_and_collisions/libs/Utils/: Utils.cpp  Utils.hpp
15_movement_and_circle_collisions/: main.cpp
15_movement_and_circle_collisions/libs/Constants/: Constants.hpp
15_movement_and_circle_collisions/libs/Dot/: Dot.cpp  Dot.hpp
15_movement_and_circle_collisions/libs/Timer/: Timer.hpp
16_level_scrolling/: main.cpp
16_level_scrolling/libs/Button/: CMakeLists.txt
16_level_scrolling/libs/Dot/: CMakeLists.txt  Dot.cpp  Dot.hpp
16_level_scrolling/libs/Texture/: CMakeLists.txt
16_level_scrolling/libs/Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
17_window_events/: CMakeLists.txt  compile_flags.txt  main.cpp
17_window_events/libs/Constants/: Constants.hpp
17_window_events/libs/Dot/: Dot.hpp
17_window_events/libs/Texture/: Texture.cpp
17_window_events/libs/Utils/: Utils.hpp
17_window_events/libs/Window/: CMakeLists.txt  Window.cpp  Window.hpp
18_particles/: CMakeLists.txt  compile_flags.txt  main.cpp
18_particles/libs/Camera/: Camera.cpp  Camera.hpp
18_particles/libs/Dot/: Dot.cpp  Dot.hpp
18_particles/libs/Particle/: CMakeLists.txt  Particle.cpp  Particle.hpp
18_particles/libs/ParticleSystem/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.hpp
18_particles/libs/Texture/: Texture.cpp  Texture.hpp
18_particles/libs/Timer/: CMakeLists.txt
19_verlet_simulation/: CMakeLists.txt  compile_flags.txt  main.cpp
19_verlet_simulation/libs/Camera/: CMakeLists.txt  Camera.cpp
19_verlet_simulation/libs/Dot/: CMakeLists.txt  Dot.cpp  Dot.hpp
19_verlet_simulation/libs/Particle/: Particle.cpp
19_verlet_simulation/libs/VerletSolver/: CMakeLists.txt  VerletSolver.cpp  VerletSolver.hpp
draw_geometry_project/: CMakeLists.txt  main.cpp
init_SDL_project/: CMakeCache.txt  Makefile  cmake_install.cmake  main
input_handling_project/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
show_image_project/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
(+15 files in other folders)
