add_library(VerletSolver VerletSolver.cpp)
target_include_directories(VerletSolver PUBLIC "../Utils/")
target_include_directories(VerletSolver PUBLIC "../Types/")
target_include_directories(VerletSolver PUBLIC "../VerletObject/")
target_include_directories(VerletSolver PUBLIC "../VerletRect/")
target_include_directories(VerletSolver PUBLIC "../Constants/")
